--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -2,5 +2,6 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-    justify-content: center;
+	justify-content: center;
+	max-width: 90vw;
 }
