--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,10 +5,12 @@
 	justify-content: space-around;
 	width: 300px;
 	margin: 10px;
-	// background-color: green;
 	padding: 1rem;
 	border-radius: 1rem;
 	border: 1px solid;
+	background-color: green;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
 
 	&__Image {
 		height: 300px;
@@ -19,5 +21,12 @@
 
 	&__LearnMore {
 		padding-top: 0.5rem;
+		background-color: white;
+	}
+
+	&:hover {
+		background-color: black;
+		cursor: pointer;
+		box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 	}
 }
