--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
