--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,7 +8,7 @@
 	padding: 1rem;
 	border-radius: 1rem;
 	border: 1px solid;
-	background-color: green;
+	background-color: rgb(114, 114, 114);
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
 
@@ -25,8 +25,8 @@
 	}
 
 	&:hover {
-		background-color: black;
+		background-color: rgb(135, 135, 135);
 		cursor: pointer;
-		box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+		box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 1);
 	}
 }
