--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
-
+	font-family: Roboto;
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
