--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ a:hover {
 
 body {
 	margin: 0;
+	padding: 0;
 	display: flex;
 	place-items: center;
 	min-width: 320px;
@@ -32,7 +33,7 @@ body {
 }
 
 h1 {
-	font-size: 3.2em;
+	font-size: 3rem;
 	line-height: 1.1;
 }
 
@@ -61,7 +62,7 @@ button:focus-visible {
 		background-color: #ffffff;
 	}
 	a:hover {
-		color: #ff9064;
+		color: #afafaf;
 	}
 	button {
 		background-color: #f9f9f9;
