--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -1,3 +1,14 @@
+.Container {
+	margin-top: 72px;
+	display: flex;
+	flex-direction: column;
+	align-items:center;
+}
+
+button {
+	margin: 1rem;
+}
+
 .CardList {
 	display: flex;
 	align-items: center;
@@ -5,4 +16,11 @@
 	justify-content: center;
 	max-width: 95vw;
 	overflow: hidden;
+}
+
+h2 {
+	margin-bottom: 1rem;
+}
+.UpNext {
+	margin-top: 1rem;
 }
