--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+	margin: 0;
+	padding: 0;
+}
 :root {
 	font-size: 16px;
 	line-height: 24px;
@@ -12,29 +16,22 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+	background-color: #4158d0;
+	background-image: linear-gradient(
+		43deg,
+		#4158d0 0%,
+		#c850c0 25%,
+		#ffcc70 100%
+	);
 }
 
 a {
 	font-weight: 500;
-	color: #ff6464;
+	color: #ffffff;
 	text-decoration: inherit;
 }
 a:hover {
-	color: #ff9064;
-}
-
-body {
-	margin: 0;
-	padding: 0;
-	display: flex;
-	place-items: center;
-	min-width: 320px;
-	min-height: 100vh;
-}
-
-h1 {
-	font-size: 3rem;
-	line-height: 1.1;
+	color: #5d93fe;
 }
 
 button {
@@ -44,12 +41,12 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #1a1a1a;
+	background-color: #363636;
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
 button:hover {
-	border-color: #ff9064;
+	border-color: #5d93fe;
 }
 button:focus,
 button:focus-visible {
@@ -59,10 +56,14 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
-		background-color: #ffffff;
+		background-color: #eaeaea;
+	}
+
+	a {
+		color: rgb(255, 255, 255);
 	}
 	a:hover {
-		color: #afafaf;
+		color: #5d93fe;
 	}
 	button {
 		background-color: #f9f9f9;
