--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 #root {
 	width: 100vw;
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	align-items: center;
 }
