--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -91,6 +91,7 @@
 	&__Logo {
 		width: 5rem;
 		height: 5rem;
+		margin: 1rem;
 		background-size: contain;
 		background-position: center;
 		background-repeat: no-repeat;
