--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -11,6 +11,10 @@
 
 	@media (prefers-color-scheme: dark) {
 		background-color: rgba(0, 0, 0, 0.8);
-        color: white;
+		color: white;
 	}
+}
+
+.Link {
+	padding: 1rem;
 }
