Added buttons to home and increased card width

--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -11,8 +11,9 @@ button {
 
 .CardList {
 	display: flex;
-	align-items: center;
+	align-items: space-evenly;
 	flex-wrap: wrap;
+	justify-content: center;
 }
 
 h2 {
