--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 3rem;
+    max-width: 75vw;
 }
 
 h3 {
@@ -11,11 +12,19 @@ h3 {
 }
 
 .Link {
-    text-align: center;
-    margin: 1rem;
-    padding: 2rem 4rem;
-    width: 200px;
-    border-radius: 1rem;
-    border: 1px solid;
+	text-align: center;
+	margin: 1rem;
+	padding: 2rem 4rem;
+	width: 200px;
+	border-radius: 1rem;
+	background-color: #363636;
+	border: 1px solid #363636;
 
+    &:hover {
+        border: 1px solid;
+    }
+	@media (prefers-color-scheme: light) {
+		background-color: rgba(255, 255, 255, 0.8);
+		color: #363636;
+	}
 }
