--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 #root {
-	width: 100vw;
 	min-height: 100vh;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	line-height: 24px;
 }
 
 .App {
