--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 100%;
 }
 
 button {
@@ -11,12 +12,15 @@ button {
 
 .CardList {
 	display: flex;
-	align-items: space-evenly;
+	align-items: center;
 	flex-wrap: wrap;
 	justify-content: center;
+	flex-direction: row;
+	margin-top: 2rem;
+	width: 100%;
 }
 
 h2 {
-	margin-bottom: 1rem;
+	margin: 1rem;
 	text-align: center;
 }
