--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 3rem;
-    max-width: 75vw;
+	max-width: 75vw;
 }
 
 h3 {
@@ -17,12 +17,14 @@ h3 {
 	padding: 2rem 4rem;
 	width: 200px;
 	border-radius: 1rem;
-	background-color: #363636;
+	background-color: rgba(54, 54, 54, 0.8);
 	border: 1px solid #363636;
+	transition: 0.25s;
 
-    &:hover {
-        border: 1px solid;
-    }
+	&:hover {
+		border: 1px solid;
+		background-color: rgba(54, 54, 54, 1);
+	}
 	@media (prefers-color-scheme: light) {
 		background-color: rgba(255, 255, 255, 0.8);
 		color: #363636;
