--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -7,8 +7,18 @@
 	max-width: 75vw;
 }
 
+h1 {
+	margin: 1rem;
+}
+h2 {
+	margin: 1rem;
+}
 h3 {
-	margin-top: 1rem;
+	margin: 1rem;
+}
+
+p {
+	margin-bottom: 1rem;
 }
 
 .Link {
