--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,6 +1,5 @@
 .Nav {
 	padding: 1rem;
-	padding-left: 5rem;
 	background-color: rgba(255, 255, 255, 0.8);
 	backdrop-filter: blur(10px);
 	width: 100%;
@@ -8,6 +7,8 @@
 	position: fixed;
 	z-index: 100;
 	top: 0;
+	display: flex;
+	justify-content: space-between;
 
 	@media (prefers-color-scheme: dark) {
 		background-color: rgba(0, 0, 0, 0.8);
