--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ button {
 	background-color: rgba(54, 54, 54, 0.8);
 	cursor: pointer;
 	transition: 0.25s;
+	margin: 1rem;
 }
 button:hover {
 	border-color: #5d93fe;
@@ -69,9 +70,11 @@ button:focus-visible {
 	a {
 		color: #213547;
 	}
+
 	a:hover {
 		color: #5d93fe;
 	}
+
 	button {
 		background-color: #f9f9f9;
 	}
