--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -5,4 +5,21 @@
 	align-items: center;
 	width: 100%;
 	overflow: hidden;
+
+	h1 h2 h3 {
+		text-align: center;
+	}
+}
+
+.Select {
+	width: 80%;
+	color: black;
+}
+
+.SelectContainer {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1rem;
 }
