--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,26 +1,175 @@
-.Nav {
-	padding: 1rem;
-	background-color: rgba(255, 255, 255, 0.8);
-	backdrop-filter: blur(10px);
-	width: 100%;
-	color: black;
-	position: fixed;
-	z-index: 100;
-	top: 0;
-	display: flex;
-	justify-content: space-between;
+// .Nav {
+//     padding: 1rem;
+//     background-color: rgba(255, 255, 255, 0.8);
+//     backdrop-filter: blur(10px);
+//     width: 100%;
+//     color: black;
+//     position: fixed;
+//     z-index: 100;
+//     top: 0;
+//     display: flex;
+//     justify-content: space-between;
 
-	@media (prefers-color-scheme: dark) {
-		background-color: rgba(0, 0, 0, 0.8);
-		color: white;
-	}
+//     @media (prefers-color-scheme: dark) {
+//         background-color: rgba(0, 0, 0, 0.8);
+//         color: white;
+//     }
+// }
+
+// .Link {
+//     padding: 1rem;
+// }
+
+// .Active {
+//     padding: 1rem;
+//     color: #5d93fe;
+// }
+
+@use "../../styles/mixin";
+
+.Nav {
+    top: 0;
+    position: sticky;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(2rem);
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    z-index: 999;
+    width: 100%;
+    @media (prefers-color-scheme: dark) {
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+    }
+}
+
+.Logo {
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 2rem;
+    padding: 0.5rem;
+    height: 60px;
+    width: 150px;
+    // background-image: url("https://i.imgur.com/kSadBMi.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    &:hover {
+        // background-image: url("https://i.imgur.com/hlWABf4.png");
+        border-radius: 10px;
+    }
+}
+
+.Badge {
+    margin-left: 0.5rem;
+    border-radius: 100%;
+    //background-color: palette.$tertiary-colour;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Menu {
+    margin-right: 2rem;
+    display: flex;
+    width: 70vw;
+    justify-content: end;
+}
+
+.Item {
+    display: flex;
+    align-items: center;
 }
 
 .Link {
-	padding: 1rem;
+    //color: palette.$primary-colour;
+    text-decoration: none;
+    padding: 1rem 0.5rem;
+    display: flex;
+    align-items: center;
+
+    &__Active {
+        color: #5d93fe;
+        padding: 1rem 0.5rem;
+        display: flex;
+        align-items: center;
+    }
+
+    &:hover {
+        //background-color: palette.$secondary-colour;
+        border-radius: 10px;
+    }
 }
 
-.Active {
-	padding: 1rem;
-	color: #5d93fe;
+.MenuIcon {
+    display: none;
+    //color: palette.$primary-colour;
+
+    &:hover {
+        // color: palette.$secondary-colour;
+    }
+}
+
+@include mixin.phone {
+    .Menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        // height: 100vh;
+        position: absolute;
+        top: 80px;
+        left: -100%;
+        transition: all 0.5s;
+        background-color: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(2rem);
+        @media (prefers-color-scheme: dark) {
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+        }
+    }
+
+    .Menu.active {
+        left: 0;
+        transition: all 0.5s ease;
+        z-index: 1;
+    }
+
+    .Link {
+        text-align: left;
+        padding: 2rem;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+        &__Active {
+            color: #5d93fe;
+            padding: 2rem;
+            display: flex;
+            align-items: center;
+        }
+
+        &:hover {
+            border-radius: 0;
+        }
+    }
+
+    .Logo {
+        position: absolute;
+        left: 0;
+    }
+
+    .MenuIcon {
+        display: block;
+        position: absolute;
+        right: 1rem;
+        padding: 1rem;
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
 }
