--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -32,6 +32,7 @@
     position: sticky;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2rem);
+    -webkit-backdrop-filter: blur(2em);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -39,6 +40,7 @@
     font-size: 1.2rem;
     z-index: 999;
     width: 100%;
+
     @media (prefers-color-scheme: dark) {
         background-color: rgba(0, 0, 0, 0.8);
         color: white;
@@ -127,8 +129,9 @@
         top: 80px;
         left: -100%;
         transition: all 0.5s;
-        background-color: rgba(255, 255, 255, 0.8);
         backdrop-filter: blur(2rem);
+        -webkit-backdrop-filter: blur(2em);
+
         @media (prefers-color-scheme: dark) {
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
@@ -146,12 +149,20 @@
         padding: 2rem;
         width: 100%;
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        @media (prefers-color-scheme: dark) {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
 
         &__Active {
+            width: 100%;
             color: #5d93fe;
             padding: 2rem;
             display: flex;
             align-items: center;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+            @media (prefers-color-scheme: dark) {
+                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            }
         }
 
         &:hover {
