--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -1,6 +1,6 @@
 .Container {
     position: relative;
-    width: 20em;
+    width: 100%;
     min-height: 1.5em;
     border: 0.05em solid #777;
     display: flex;
@@ -22,7 +22,7 @@
     flex-wrap: wrap;
 }
 
-.Clear-btn {
+.Clear-Btn {
     background: none;
     color: #777;
     border: none;
@@ -33,8 +33,8 @@
     font-size: 1.25em;
 }
 
-.Clear-btn:focus,
-.Clear-btn:hover {
+.Clear-Btn:focus,
+.Clear-Btn:hover {
     color: #333;
 }
 
@@ -82,4 +82,32 @@
 
 .Option.Highlighted {
     background-color: hsl(200, 100%, 50%);
+}
+
+.Option-Badge {
+    display: flex;
+    align-items: center;
+    border: 0.05em solid #777;
+    border-radius: 0.25em;
+    padding: 0.15em 0.25em;
+    gap: 0.25em;
+    cursor: pointer;
+    background: none;
+    outline: none;
+}
+
+.Option-Badge:hover,
+.Option-Badge:focus {
+    background-color: hsl(0, 100%, 90%);
+    border-color: hsl(0, 100%, 50%);
+}
+
+.Option-Badge:hover > .Remove-Btn,
+.Option-Badge:focus > .Remove-Btn {
+    color: hsl(0, 100%, 50%);
+}
+
+.Option-Badge > .Remove-Btn {
+    font-size: 1.25em;
+    //color: #777;
 }
