--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -39,5 +39,9 @@ p {
     @media (prefers-color-scheme: light) {
         background-color: rgba(255, 255, 255, 0.8);
         color: #363636;
+
+        &:hover {
+            background-color: white;
+        }
     }
 }
