--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ button {
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
-    font-weight: 500;
     font-family: inherit;
     background-color: rgba(54, 54, 54, 0.8);
     cursor: pointer;
@@ -57,13 +56,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
-        background-color: #eaeaea;
-        background-image: linear-gradient(
-            43deg,
-            #4158d0 0%,
-            #c850c0 25%,
-            #ffcc70 100%
-        );
+        background-color: rgba(255, 255, 255, 0.8);
     }
 
     a {
@@ -75,6 +68,10 @@ button:focus-visible {
     }
 
     button {
-        background-color: #f9f9f9;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+
+    button:hover {
+        background-color: white;
     }
 }
