--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -13,6 +13,7 @@
     font-size: 1.2rem;
     z-index: 100;
     width: 100%;
+    margin-bottom: 1rem;
 
     @media (prefers-color-scheme: dark) {
         background-color: rgba(54, 54, 54, 0.8);
