--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -5,6 +5,6 @@
     justify-content: center;
     flex-direction: row;
     margin-top: 2rem;
+    margin-bottom: 2rem;
     width: 100%;
-    padding-bottom: 4rem;
 }
