--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,24 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem;
     max-width: 75vw;
-}
 
-h1 {
-    margin: 1rem;
-}
+    h1 {
+        margin: 1rem 0rem;
+    }
 
-h2 {
-    margin: 1rem;
-}
-
-h3 {
-    margin: 1rem;
-}
-
-p {
-    margin-bottom: 1rem;
+    h2 {
+        margin: 1rem 0rem;
+    }
 }
 
 .Link {
